@@ -1,6 +1,7 @@
 2009-06-15 - Sean Huber (shuber@huberry.com)
   * Tree accepts an array of order options
   * Add Tree#parent_column_value
+  * Refactor Tree#nestable_scope
 
 2009-06-14 - Sean Huber (shuber@huberry.com)
   * Update Nestable interface logic
